--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body{
     display: grid;
     grid-template-rows: auto 1fr auto;
     font-family: sans-serif;
-    background-image: url(/assets/images/degradado.jpg);
+    background-image: url(assets/images/degradado.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
