--- a/views/Productos.html
+++ b/views/Productos.html
@@ -12,7 +12,7 @@
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_HEADER_-_-_-_-_-_-_-_-_-_-_-_-_-->
     <header>
         <div class="div-logo">
-            <div class="logo"><a href="/index.html">AlejoCorona</a></div>
+            <div class="logo"><a href="/index.html">AlejaoCorona</a></div>
             
             <nav>
                 <a href="/index.html" id="boton1">Inicio</a>
