--- a/views/Productos.html
+++ b/views/Productos.html
@@ -26,7 +26,7 @@
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_MAIN_-_-_-_-_-_-_-_-_-_-_-_-_-->
     <main>
         <div id="galery">
-            <img src="/assets/images/galeria1.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria1.jpg" alt="imagen de reloj">
             <img src="/assets/images/galeria2.jpg" alt="imagen de reloj">
             <img src="/assets/images/galeria3.jpg" alt="imagen de reloj">
             <img src="/assets/images/galeria4.jpg" alt="imagen de reloj">
