--- a/views/Productos.html
+++ b/views/Productos.html
@@ -16,8 +16,8 @@
             
             <nav>
                 <a href="../index.html" id="boton1">Inicio</a>
-				<a href="views/Productos.html" id="boton2">Productos</a>
-				<a href="views/presupuesto.html" id="boton3">Presupuestos</a>
+				<a href="../Productos.html" id="boton2">Productos</a>
+				<a href="../presupuesto.html" id="boton3">Presupuestos</a>
 				<a href="views/contacto.html" id="boton4">Contacto</a>
             </nav>
         </div>
