--- a/views/Productos.html
+++ b/views/Productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>Productos</title>
     <link rel="stylesheet" href="../css/Productos.css">
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -16,9 +16,9 @@
             
             <nav>
                 <a href="../index.html" id="boton1">Inicio</a>
-				<a href="views/Productos.html" id="boton2">Productos</a>
-				<a href="views/presupuesto.html" id="boton3">Presupuestos</a>
-				<a href="views/contacto.html" id="boton4">Contacto</a>
+				<a href="../views/Productos.html" id="boton2">Productos</a>
+				<a href="presupuesto.html" id="boton3">Presupuestos</a>
+				<a href="../contacto.html" id="boton4">Contacto</a>
             </nav>
         </div>
     </header>
