--- a/views/Productos.html
+++ b/views/Productos.html
@@ -16,9 +16,9 @@
             
             <nav>
                 <a href="../index.html" id="boton1">Inicio</a>
-				<a href="../views/Productos.html" id="boton2">Productos</a>
+				<a href="Productos.html" id="boton2">Productos</a>
 				<a href="presupuesto.html" id="boton3">Presupuestos</a>
-				<a href="../contacto.html" id="boton4">Contacto</a>
+				<a href="contacto.html" id="boton4">Contacto</a>
             </nav>
         </div>
     </header>
