--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conjjutacto</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -12,13 +12,13 @@
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_HEADER_-_-_-_-_-_-_-_-_-_-_-_-_-->
     <header>
         <div class="div-logo">
-            <div class="logo"><a href="/index.html">AlejoCorona</a></div>
+            <div class="logo"><a href="../index.html">AlejoCorona</a></div>
             
             <nav>
-                <a href="/index.html" id="boton1">Inicio</a>
-				<a href="/views/Productos.html" id="boton2">Productos</a>
-				<a href="/views/presupuesto.html" id="boton3">Presupuestos</a>
-				<a href="/views/contacto.html" id="boton4">Contacto</a>
+                <a href="../index.html" id="boton1">Inicio</a>
+				<a href="Productos.html" id="boton2">Productos</a>
+				<a href="presupuesto.html" id="boton3">Presupuestos</a>
+				<a href="contacto.html" id="boton4">Contacto</a>
             </nav>
         </div>
     </header>
