--- a/views/Productos.html
+++ b/views/Productos.html
@@ -27,28 +27,28 @@
     <main>
         <div id="galery">
             <img src="../assets/images/galeria1.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria2.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria3.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria4.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria5.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria6.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria7.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria8.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria9.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria10.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria11.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria12.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria13.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria14.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria15.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria16.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria17.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria18.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria19.jpg" alt="imagen de reloj">
-            <img src="/assets/images/galeria20.jpg" alt="imagen de reloj">
-            <img class=imgpanoramicas src="/assets/images/galeria21.jpg" alt="imagen de reloj">
-            <img class=imgpanoramicas src="/assets/images/galeria22.jpg" alt="imagen de reloj">
-            <img class=imgpanoramicas src="/assets/images/galeria23.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria2.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria3.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria4.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria5.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria6.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria7.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria8.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria9.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria10.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria11.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria12.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria13.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria14.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria15.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria16.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria17.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria18.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria19.jpg" alt="imagen de reloj">
+            <img src="../assets/images/galeria20.jpg" alt="imagen de reloj">
+            <img class=imgpanoramicas src="../assets/images/galeria21.jpg" alt="imagen de reloj">
+            <img class=imgpanoramicas src="../assets/images/galeria22.jpg" alt="imagen de reloj">
+            <img class=imgpanoramicas src="../assets/images/galeria23.jpg" alt="imagen de reloj">
         </div>
     </main>
 
