--- a/views/contacto.html
+++ b/views/contacto.html
@@ -61,7 +61,7 @@
                             Web
                         </th>
                         <th>
-                            Aca va a ir la url
+                            https://alejo-cpu.github.io/HTML-CSS-tarea/
                         </th>
                     </tr>
 
@@ -76,7 +76,7 @@
     <footer>
         <div>
             <p class="footer-p" id="p1">© Todos los derechos reservados</p>
-            <p class="footer-p" id="p2">ACA VA A IR LA URL</p>
+            <p class="footer-p" id="p2">C. de Provença, 112</p>
         </div>
 
         <ul class="redes">
