--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -42,7 +42,7 @@
     <footer>
         <div>
             <p class="footer-p" id="p1">© Todos los derechos reservados</p>
-            <p class="footer-p" id="p2">ACA VA A IR LA URL</p>
+            <p class="footer-p" id="p2">C. de Provença, 112</p>
         </div>
 
         <ul class="redes">
